resources/css/sass/pages/_header.scss
@use "../abstracts" as *;

.header-wrapper {
    max-width: 100vw;
    display: initial;
    z-index: 1;

    .logo-wrapp {
        height: 100px;
        max-width: 100vw;
        background: white;
        position: relative;
        z-index: 1;
        display: grid;
        overflow: hidden;
        place-items: center;

        &.mobile {
            display: none;
        }

        img {
            display: block;
            height: 100px;
        }

        svg {
            position: absolute;
            height: 50px;
            top: 52%;
            left: 50%;
            transform: translate(-50%, -50%);

            // .st0 {
            //     fill: #c63b41;
            // }
            //
            // .st1 {
            //     fill: #1a497c;
            // }
            //
            // .st2 {
            //     fill: #929292;
            // }
            .st0 {
                fill: #C7373D;
            }

            .st1 {
                fill: #194477;
            }

            .st2 {
                fill: #8F8F8F;
            }

            .st3 {
                fill: #A2A1A1;
            }

            .st4 {
                display: none;
                fill: #8F8F8F;
            }

            .st5 {
                display: none;
            }

            .st6 {
                display: inline;
            }

            .st7 {
                font-family: 'HelveticaNeueLTStd-BdEx';
            }

            .st8 {
                font-size: 42.6403px;
            }

            .st9 {
                display: inline;
                fill: #194477;
            }

            .st10 {
                display: inline;
                fill: #8F8F8F;
            }

            .st11 {
                display: inline;
                fill: #A2A1A1;
            }

            .st12 {
                font-family: 'HelveticaNeueLTPro-Ex';
            }

            .st13 {
                font-size: 22.5px;
            }

        }
    }

    .links-wrapper {
        width: 100%;
        max-width: 100vw;
        display: grid;
        place-items: center;
        height: 50px;
        background: #ebebeb;
        position: sticky;
        z-index: 1;
        top: 0;

        .links {
            width: 1200px;
            display: flex;
            align-items: center;
            justify-content: center;
            gap:100px; 

            a {
                text-decoration: none;
                color: $blue;
                font-size: 17px;
                font-family: "Helvetica Neue";
                padding-top: 2px;
                text-transform: uppercase;

                &.highlighted {
                    margin-right: -10px;
                    text-transform: uppercase;

                    &.red {
                        color: black;
                        margin-right: 0;

                        &:hover {
                            color: $red;
                        }
                    }
                }

                &:hover {
                    color: $red;
                }

                &.active {
                    color: $red !important;
                    pointer-events: none;
                }
            }
        }
    }

    .mobile-underheader {
        display: none;
        z-index: 1;
        background: white;
        width: 100%;
        height: 50px;
        border-bottom: 1px solid $mid-gray;
        position: relative;
        place-items: center;

        .mobile-button {
            position: absolute;
            height: 100%;
            width: 50px;
            right: 0;
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            gap: 5px;

            .button {
                height: 2px;
                width: 30px;
                background: $dark-gray;
                position: relative;
                transform-origin: center;
                transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
                transition-property: transform, opacity;

                &.open-left {
                    transform: rotate(45deg);
                    top: 6px;
                }

                &.open-middle {
                    opacity: 0;
                }

                &.open-right {
                    transform: rotate(-45deg);
                    top: -8px;
                }
            }
        }

        h1 {
            font-family: "Helvetica Neue";
            font-size: 20px;
            text-transform: uppercase;
            margin-top: 8px;
        }
    }
}

#mobile-menu {
    display: none;
    transform: translateX(100%);
    display: block;
    z-index: 4;
    position: fixed;
    top: 100px;
    height: calc(100vh - 150px);
    width: 100%;
    background: white;
    transition: 0.3s ease-out;

    &.open {
        transform: translateX(0%);
    }

    .links {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 30px;
        padding-left: 30px;
        padding-top: 30px;

        a {
            text-decoration: none;
            color: $dark-gray;
            font-size: 20px;

            &.bigger {
                margin-right: -10px;
                padding-top: 8px;
                text-transform: uppercase;
                font-size: 15px;
                font-family: "Helvetica Neue";

                &.red {
                    color: black;

                    &:hover {
                        color: $red;
                    }
                }
            }

            &:hover {
                color: $red;
            }

            &.active {
                color: $red !important;
                pointer-events: none;
            }
        }

        .logout-mobile {
            display: inline;
            width: max-content;
            border: 0;
            outline: 0;
            background: none;
            color: $dark-gray;
            font-size: 20px;
            margin-top: 30px;

            &:hover {
                color: $red;
            }
        }
    }
}

@media only screen and (max-width: 1200px) {
    .header-wrapper {
        position: fixed;
        width: 100%;
        top: 0;

        .logo-wrapp {
            height: 50px !important;
            margin-top: 0 !important;
            overflow: hidden;
            border-bottom: 1px solid $dark-gray;

            .logo-text {
                font-size: 20px;
                width: max-content;
            }

            img {
                height: 60px;
                margin-top: -6px;
            }

            svg {
                height: 30px;
                margin-top: 2px;
            }
        }

        .links-wrapper {
            display: none;
        }

        .mobile-underheader {
            display: grid;
            place-items: center;
        }
    }

    #mobile-menu {
        display: block;
    }
}

